assessment-02/apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: parcial-reaga
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-nginx
  namespace: parcial-reaga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-nginx
  template:
    metadata:
      labels:
        app: web-nginx
    spec:
      containers:
      - name: web
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-nginx
  namespace: parcial-reaga
spec:
  selector:
    app: web-nginx
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-apache
  namespace: parcial-reaga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-apache
  template:
    metadata:
      labels:
        app: web-apache
    spec:
      containers:
      - name: web
        image: httpd:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-apache
  namespace: parcial-reaga
spec:
  selector:
    app: web-apache
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-whoami
  namespace: parcial-reaga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-whoami
  template:
    metadata:
      labels:
        app: web-whoami
    spec:
      containers:
      - name: web
        image: traefik/whoami
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-whoami
  namespace: parcial-reaga
spec:
  selector:
    app: web-whoami
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-hello
  namespace: parcial-reaga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-hello
  template:
    metadata:
      labels:
        app: web-hello
    spec:
      containers:
      - name: web
        image: nginxdemos/hello
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-hello
  namespace: parcial-reaga
spec:
  selector:
    app: web-hello
  ports:
  - port: 80
    targetPort: 80
